--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Login - Manajemen Data Siswa</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Login</h1>
+        <header class="mb-4 d-flex justify-content-between">
+            <div>
+                <h1 class="mb-0">Login</h1>
+                <p class="text-muted mb-0">Halo, silahkan login dulu!
+                </p>
+            </div>
+        </header>
         <form action="/login" method="POST">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
