--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,8 @@
                 </p>
             </div>
 
-            <a href="{{ url_for('logout') }}" class="btn btn-outline-danger d-inline-flex align-items-center justify-content-center">
+            <a href="{{ url_for('logout') }}"
+                class="btn btn-outline-danger d-inline-flex align-items-center justify-content-center">
                 <i class="bi bi-box-arrow-right"></i> Log Out
             </a>
         </header>
@@ -43,7 +44,14 @@
                     <td>{{ student.grade }}</td>
                     <td>
                         <a href="/edit/{{ student.id }}" class="btn btn-warning">Edit</a>
-                        <a href="/delete/{{ student.id }}" class="btn btn-danger">Delete</a>
+                        <form action="{{ url_for('delete_student', id=student.id) }}" method="POST"
+                            style="display:inline;">
+                            <button type="submit"
+                                onclick="return confirm('Apakah Anda yakin ingin menghapus data ini?')"
+                                class="btn btn-danger">
+                                Hapus
+                            </button>
+                        </form>
                     </td>
                 </tr>
                 {% endfor %}
